posiGen_FullsendBox/src/objects/Trigger_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Attachment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BoxAccessMatrixStage_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BoxAccessMatrixStage Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeedItem_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FeedItem Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LD_Lease_trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>LD Lease trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogsTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LogsTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PM Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Deal_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Deal Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Issue_Comment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Issue Comment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Lead_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Opportunity_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Prospect_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Prospect Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_System_Part_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync System Part Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>for TaskTriggerNew</description>
        <label>Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Setting</label>
</CustomObject>